z-index fix

--- a/src/components/modal/styles/CdrModal.module.scss
+++ b/src/components/modal/styles/CdrModal.module.scss
@@ -20,7 +20,7 @@ $modal-animation-duration: 150ms;
   right: 0;
   top: 0;
   visibility: visible;
-  z-index: 1000;
+  z-index: 9999;
 
   &__overlay {
     background-color: $cdr-color-background-modal-overlay;
